// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`primitives 1. without attributes: 1. without attributes 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(Text, null, "hello");
};

`;

exports[`primitives 2. with plane color value: 2. with plane color value 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-background-color="red">hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        backgroundColor: "red",
      },
    },
    "hello"
  );
};

`;

exports[`primitives 3. with string value inside expression: 3. with string value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-background-color={"red"}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        backgroundColor: "red",
      },
    },
    "hello"
  );
};

`;

exports[`primitives 4. with number value inside expression: 4. with number value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-p={16}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        padding: 16,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 5. with boolean value raw: 5. with boolean value raw 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-enabled>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: true,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 6. with boolean value inside expression: 6. with boolean value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-enabled={false}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: false,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 7. with local variable: 7. with local variable 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  const enabled=true;
  return <Text s-enabled={enabled}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  const enabled = true;
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: enabled,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 8. with function value: 8. with function value 1`] = `


import React from 'react';
import Text from 'react-native';
const getEnabled=()=>true
const App=()=>{
  return <Text s-enabled={getEnabled()}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const getEnabled = () => true;
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: getEnabled(),
      },
    },
    "hello"
  );
};

`;

exports[`primitives 9. with unary operation: 9. with unary operation 1`] = `


import React from 'react';
import Text from 'react-native';
const enabled=true
const App=()=>{
  return <Text s-enabled={!enabled}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const enabled = true;
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: !enabled,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 10. with binary operation: 10. with binary operation 1`] = `


import React from 'react';
import Text from 'react-native';
const enabled=true
const App=()=>{
  return <Text s-enabled={enabled!==true}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const enabled = true;
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: enabled !== true,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 11. with number operation: 11. with number operation 1`] = `


import React from 'react';
import Text from 'react-native';
const getPadding=()=>10
const App=()=>{
  return <Text s-padding={getPadding()+10}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const getPadding = () => 10;
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        padding: getPadding() + 10,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 12. with predefined values: 12. with predefined values 1`] = `


import React from 'react';
import Text from 'react-native';
const getPadding=()=>10
const App=()=>{
  return <Text s-position="absolute">hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const getPadding = () => 10;
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        position: "absolute",
      },
    },
    "hello"
  );
};

`;

exports[`primitives 13. with array values: 13. with array values 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-transform={[]}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        transform: [],
      },
    },
    "hello"
  );
};

`;

exports[`primitives 14. with null value: 14. with null value 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-transform={null}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        transform: null,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 15. with undefined value: 15. with undefined value 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-transform={undefined}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        transform: undefined,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 16. View component: 16. View component 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <View s-padding={20}>hello</View>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    View,
    {
      style: {
        padding: 20,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 17. with 2 styles props: 17. with 2 styles props 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <View s-padding={20} s-transform={undefined} s-background-color={(theme)=>theme.color}>hello</View>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import { useTheme as _useTheme } from "react-native-easy-theming";
import React from "react";
import Text from "react-native";
const App = () => {
  const _theme = _useTheme();
  return /*#__PURE__*/ React.createElement(
    View,
    {
      style: {
        padding: 20,
        transform: undefined,
        backgroundColor: (() => _theme.color)(),
      },
    },
    "hello"
  );
};

`;

exports[`primitives 18. with 2 nested components: 18. with 2 nested components 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return (
    <View s-padding="paddings.max">
      <Text s-color="colors.primary">hello</Text>
    </View>
  )
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import { useTheme as _useTheme } from "react-native-easy-theming";
import React from "react";
import Text from "react-native";
const App = () => {
  const _theme = _useTheme();
  return /*#__PURE__*/ React.createElement(
    View,
    {
      style: {
        padding: _theme.paddings.max,
      },
    },
    /*#__PURE__*/ React.createElement(
      Text,
      {
        style: {
          color: _theme.colors.primary,
        },
      },
      "hello"
    )
  );
};

`;
